WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224965
[ANGLE-Metal] Fix 17 textureshadow tests
https://bugs.webkit.org/show_bug.cgi?id=224965
Summary
[ANGLE-Metal] Fix 17 textureshadow tests
Kyle Piddington
Reported
2021-04-22 19:59:37 PDT
[ANGLE-Metal] Fix 17 textureshadow tests
Attachments
Patch
(6.06 KB, patch)
2021-04-22 20:04 PDT
,
Kyle Piddington
no flags
Details
Formatted Diff
Diff
Patch
(204.93 KB, patch)
2021-04-29 15:32 PDT
,
Kyle Piddington
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kyle Piddington
Comment 1
2021-04-22 20:04:50 PDT
Created
attachment 426884
[details]
Patch
EWS Watchlist
Comment 2
2021-04-22 20:06:13 PDT
Note that there are important steps to take when updating ANGLE. See
https://trac.webkit.org/wiki/UpdatingANGLE
Kyle Piddington
Comment 3
2021-04-29 15:32:44 PDT
Created
attachment 427379
[details]
Patch
EWS
Comment 4
2021-04-29 16:35:48 PDT
Committed
r276820
(
237175@main
): <
https://commits.webkit.org/237175@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427379
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-04-29 16:36:15 PDT
<
rdar://problem/77349977
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug