[ANGLE-Metal] Fix 17 textureshadow tests https://bugs.webkit.org/show_bug.cgi?id=224965 <rdar://77053085>

Depth24Stencil8 copies were being incorrectly managed when dealing with D24S8 emulation.
Fix conversion functions

Patch by Kyle Piddington <kpiddington@apple.com> on 2021-04-29
Reviewed by Dean Jackson.

* src/libANGLE/renderer/metal/mtl_format_utils.h:
* src/libANGLE/renderer/metal/mtl_format_utils.mm:
(rx::mtl::priv::OffsetDataPointer):
(rx::mtl::LoadS8D24S8ToD32FX24S8):
(rx::mtl::DEPTH24_STENCIL8_to_D32_FLOAT_X24S8_UINT):
(rx::mtl::GetLoadFunctionsMap):
(rx::mtl::FormatTable::initialize):
(): Deleted.

Canonical link: https://commits.webkit.org/237175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276820 268f45cc-cd09-0410-ab3c-d52691b4dbfc