Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_format_utils.h
@@ -28,6 +28,8 @@ class DisplayMtl;
 namespace mtl
 {
 
+LoadFunctionMap GetLoadFunctionsMap(GLenum internalFormat, angle::FormatID angleFormat);
+
 struct FormatBase
 {
     inline bool operator==(const FormatBase &rhs) const
